objects/Territory_Quota__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month_Date__c</fullName>
        <label>Fiscal Month (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <label>Fiscal Month</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Renewal__c</fullName>
        <label>Future Renewal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Sale__c</fullName>
        <label>New Sale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Territory Quotas</relationshipLabel>
        <relationshipName>Territory_Quotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <label>Current Renewal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TMS_Terr_Num__c</fullName>
        <description>Territory number from TMS</description>
        <label>TMS Terr Num</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Type__c</fullName>
        <description>this is to distinquish the terriroty quota&apos;s within the territory</description>
        <label>Territory Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Territory Quota</label>
    <listViews>
        <fullName>All</fullName>
        <columns>TMS_Terr_Num__c</columns>
        <columns>Fiscal_Month__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Territory_Quota_Validation</fullName>
        <columns>TMS_Terr_Num__c</columns>
        <columns>Fiscal_Month__c</columns>
        <columns>New_Sale__c</columns>
        <columns>Renewal__c</columns>
        <columns>Territory_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Territory Quota - Validation</label>
    </listViews>
    <listViews>
        <fullName>X81600</fullName>
        <columns>Fiscal_Month__c</columns>
        <columns>TMS_Terr_Num__c</columns>
        <columns>Fiscal_Month_Date__c</columns>
        <columns>New_Sale__c</columns>
        <columns>Renewal__c</columns>
        <columns>Future_Renewal__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TMS_Terr_Num__c</field>
            <operation>startsWith</operation>
            <value>199130</value>
        </filters>
        <filters>
            <field>Fiscal_Month__c</field>
            <operation>contains</operation>
            <value>2017</value>
        </filters>
        <label>LMS Verifications</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Territory Quota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Quotas</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>